# for display continuity sake please use 2 spaces instead of tabs

--> Changes.txt updated up to here

2013-04-04 mmichaud <michael.michaud@free.fr>
  * update JumpPrinter PlugIn from 1.84 to 1.85 (bug fix)
  
2013-04-05  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add icons to Style Layer Context Submenu, RasterColorEditor, SearchAllAttribute,
    SimpleQuery and SpatialQuery plugins

2013-04-04 mmichaud <michael.michaud@free.fr>
  * add Flatten3DGeometries.bsh BeanTool and improve beantools sorting

2013-04-03 mmichaud <michael.michaud@free.fr>
  * Sort the list of beantools for linux/mac users
  * bug 3608987 finally resolved

2013-03-31 mmichaud <michael.michaud@free.fr>
  * Improve postgis driver : add a vacumm analyze after creation of a spatial
    index (SaveToPostGISDataSource). Test if a spatial index exists to choose 
    the most appropriate way to compute the dataset extent (PostgisDSMetadata)

2013-03-30 ede
  * make statusbar vertically resizable
  * all fields resizeable again and tooltipped
  * statusbar looks better now
  * minor fixes, cleanup

2013-03-30 mmichaud <michael.michaud@free.fr>
  * bug 3607970 : improve robustness of SimplifyPolygonCoveragePlugIn and 
    normalize I18N
  * Fix PasteStylePlugIn (was throwing exception with LabelStyle using FID)

2013-03-28 mmichaud <michael.michaud@free.fr>
  * fix Screen Scale and SaveImageAsSVG problem (would need some refactoring 
    after 1.6 release though). Change resolution to 0.001 pixel size for svg 
    drawer
  
2013-03-27 mmichaud <michael.michaud@free.fr>
  * Change output resolution of svg drawer from 0.5 to 0.1 pixel

2013-03-27 mmichaud <michael.michaud@free.fr>
  * Improve how buttons of RunDataStoreQuery works
  
2013-03-24 mmichaud <michael.michaud@free.fr>
  * Postgis Reader/Writer is now SRID aware

2013-03-24 mmichaud <michael.michaud@free.fr>
  * It is now much faster to get the list of available WMS layer from a service
  
2013-03-24 mmichaud <michael.michaud@free.fr>